--- a/style.css
+++ b/style.css
@@ -2,7 +2,8 @@
 
 :root {
   /* spacings */
-  --section-padding: 60px;
+  --section-padding: 80px;
+  --about-content-margin: 20px;
 
   /* colors */
   --clr-dark-blue-intro: hsl(217, 28%, 15%);
@@ -14,14 +15,15 @@
   --clr-blue: hsl(198, 60%, 50%);
   --clr-light-red: hsl(0, 100%, 63%);
   --clr-white: hsl(0, 0%, 100%);
-  --clr-light: hsla(0, 0%, 100%, 0.9);
+  --clr-light: hsla(0, 0%, 100%, 0.8);
 
   /* typography */
   --ff-Raleway: "Raleway", sans-serif;
   --ff-Open-sans: "Open Sans", sans-serif;
 
   --fs-hero__title: 2.1rem;
-  --fs-section-title: 1.7rem;
+  --fs-section-title: 1.8rem;
+  --fs-section-text: 1.2rem;
 }
 
 /* reset */
@@ -103,6 +105,10 @@ body {
   color: var(--clr-light);
 }
 
+.text-clr-cyan {
+  color: var(--clr-cyan);
+}
+
 .margin-inline-auto {
   margin-inline: auto;
 }
@@ -124,22 +130,26 @@ body {
   font-weight: 400;
   line-height: 1.5;
   margin-block: 12px;
-  font-size: 1.2rem;
+  font-size: var(--fs-section-text);
+}
+
+.button,
+.about__btn {
+  font-family: var(--ff-Raleway);
+  transition: background-color 300ms ease;
 }
 
 .button {
-  background-color: var(--clr-cyan);
+  background-color: var(--clr-blue);
   color: var(--clr-white);
-  font-family: var(--ff-Raleway);
   padding: 8px 40px;
   border-radius: 20px;
   font-weight: 600;
-  transition: opacity 300ns ease;
 }
 
-button:is(:hover, :focus) {
+.button:is(:hover, :focus) {
   background-color:
-    hsl(176, 68%, 75%);
+    hsl(198, 60%, 65%);
 }
 
 button,
@@ -149,15 +159,20 @@ button,
 
 /* main styles */
 
-main {
+.main {
   background-image: url("/images/bg-curvy-mobile.svg");
+  background-position: top;
   background-size: cover;
   background-repeat: no-repeat;
 }
 
 /* header */
 .navbar__list {
-  gap: 25px;
+  gap: 30px;
+}
+
+.navbar__link {
+  font-weight: 600;
 }
 
 .navbar__link::before {
@@ -175,7 +190,8 @@ main {
 }
 
 /* hero section */
-.hero-illustration {
+.hero-illustration,
+.about__figure {
   max-width: 375px;
 }
 
@@ -208,10 +224,98 @@ main {
   margin-block-start: 12px;
 }
 
+/* about content */
+
+.about__content {
+  margin-block-start: var(--about-content-margin);
+}
+
+.about__btn__wrappper {
+  gap: 10px;
+  max-width: max-content;
+}
+
+.about__btn {
+  font-weight: 500;
+}
+
+.about__btn::after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 1px;
+  background-color: var(--clr-cyan);
+  bottom: -3px;
+  left: 0;
+  transition-property: color;
+}
+
+.about__btn:is(:hover, :focus) {
+  color: var(--clr-white)
+}
+
+.about__btn:is(:hover, :focus)::after {
+  all: unset;
+}
+
+/* testimonial section */
+
+.testimonials {
+  --section-padding: 90px;
+}
+
+.testimonials__list {
+  gap: 30px;
+}
+
+.testimonial-card {
+  background-color: var(--clr-dark-blue-testimonials);
+  border-radius: 6px;
+  padding: 20px 15px;
+  z-index: 2;
+  isolation: isolate;
+}
+
+.user-profile {
+  gap: 10px;
+}
+
+.user__avatar {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  object-fit: cover;
+  object-position: center;
+  overflow: hidden;
+}
+
+.user__info {
+  line-height: 1.2;
+}
+
+.user__name {
+  font-family: var(--ff-Raleway);
+  font-weight: 700;
+}
+
+.user__designation {
+  font-size: 1rem;
+}
+
+.quote-mark {
+  top: -20px;
+  left: 0;
+  z-index: -10;
+}
+
 /* media queries */
 
 /* responisve for devices more than 575px */
 @media(min-width:575px) {
+  :root {
+    --section-padding: 60px;
+  }
+
   .hero-illustration {
     max-width: 420px;
   }
@@ -222,5 +326,40 @@ main {
 
   .features__list {
     grid-template-columns: 1fr 1fr;
+  }
+
+  .about__content .section__title {
+    font-size: var(--fs-hero__title);
+    max-width: 20ch;
+    text-wrap: balance;
+  }
+
+  .about__figure {
+    margin-inline: auto;
+  }
+
+  .testimonials__list {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
+/* responsive for devices more than 768px */
+@media(min-width:768px) {
+  :root {
+    --fs-hero__title: 2.4rem;
+    --fs-section-title: 2rem;
+  }
+}
+
+/* responsive for devices more than 992px */
+@media(min-width:992px) {
+  :root {
+    --fs-hero__title: 2.6rem;
+    --fs-section-title: 2.1rem;
+    --fs-section-text: 1.35rem;
+  }
+
+  .testimonials__list {
+    grid-template-columns: 1fr 1fr 1fr;
   }
 }
